--- a/Project.toml
+++ b/Project.toml
@@ -20,6 +20,7 @@ Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
 Sockets = "6462fe0b-24de-5631-8697-dd941f90decc"
 
 [compat]
+julia = "1"
 AzSessions = "1"
 HTTP = "0.8"
 JSON = "0.21"
