--- a/Project.toml
+++ b/Project.toml
@@ -24,7 +24,7 @@ julia = "1"
 AzSessions = "1"
 HTTP = "0.8"
 JSON = "0.21"
-MPI = "0.14"
+MPI = "0.14, 0.15"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
