--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -15,19 +15,17 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
-      # - name: Install System
-      #   run: |
-      #     julia_version_minor=`echo ${{ variables.julia_version }} | sed 's/\.[^.]*$//'`
+      - name: Install Julia System
+        run: |
+          sudo wget https://julialang-s3.julialang.org/bin/linux/x64/1.5/julia-1.5.0-linux-x86_64.tar.gz
+          sudo mkdir -p /opt/julia
+          sudo tar --strip-components=1 -xzvf julia-1.5.0-linux-x86_64.tar.gz -C /opt/julia
 
-      #     sudo wget https://julialang-s3.julialang.org/bin/linux/x64/${julia_version_minor}/julia-${{ variables.julia_version }}-linux-x86_64.tar.gz
-      #     sudo mkdir -p /opt/julia
-      #     sudo tar --strip-components=1 -xzvf julia-${{ variables.julia_version }}-linux-x86_64.tar.gz -C /opt/julia
+          mkdir -p $(HOME)/.julia/dev
+          cp -r ${BUILD_SOURCESDIRECTORY} $(HOME)/.julia/dev/AzManagers
 
-      #     mkdir -p $(HOME)/.julia/dev
-      #     cp -r ${BUILD_SOURCESDIRECTORY} $(HOME)/.julia/dev/AzManagers
-
-      #     /opt/julia/bin/julia -e 'using Pkg; pkg"dev /home/vsts/.julia/dev/AzManagers"'
-      #     /opt/julia/bin/julia -e 'using Pkg; pkg"precompile"'
-      - name: Run unit-tests
+          /opt/julia/bin/julia -e 'using Pkg; pkg"dev /home/vsts/.julia/dev/AzManagers"'
+          /opt/julia/bin/julia -e 'using Pkg; pkg"precompile"'
+      - name: Run Julia Unit Tests
         run: |
           /opt/julia/bin/julia -e 'using Pkg; pkg"test AzManagers"'
