--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -13,22 +13,19 @@ jobs:
         run: pwd
       - name: Run a multi-line script
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
-      - name: Install Julia System
-        run: |
-          sudo wget https://julialang-s3.julialang.org/bin/linux/x64/1.5/julia-1.5.0-linux-x86_64.tar.gz
-          sudo mkdir -p /opt/julia
-          sudo tar --strip-components=1 -xzvf julia-1.5.0-linux-x86_64.tar.gz -C /opt/julia
-
-
+          cd ~
           pwd
-          mkdir -p /home/runner/work/AzManagers.jl/.julia/dev
+      # - name: Install Julia System
+      #   run: |
+      #     sudo wget https://julialang-s3.julialang.org/bin/linux/x64/1.5/julia-1.5.0-linux-x86_64.tar.gz
+      #     sudo mkdir -p /opt/julia
+      #     sudo tar --strip-components=1 -xzvf julia-1.5.0-linux-x86_64.tar.gz -C /opt/julia
 
+      #     mkdir -p /home/runner/work/AzManagers.jl/.julia/dev
+      #     cp -r ${BUILD_SOURCESDIRECTORY} /home/runner/work/AzManagers.jl/.julia/dev/AzManagers
 
-          /opt/julia/bin/julia -e 'using Pkg; pkg"dev /home/vsts/.julia/dev/AzManagers"'
-          /opt/julia/bin/julia -e 'using Pkg; pkg"precompile"'
-      - name: Run Julia Unit Tests
-        run: |
-          /opt/julia/bin/julia -e 'using Pkg; pkg"test AzManagers"'
-        # cp -r ${BUILD_SOURCESDIRECTORY} /home/runner/work/AzManagers.jl/.julia/dev/AzManagers
+      #     /opt/julia/bin/julia -e 'using Pkg; pkg"dev /home/vsts/.julia/dev/AzManagers"'
+      #     /opt/julia/bin/julia -e 'using Pkg; pkg"precompile"'
+      # - name: Run Julia Unit Tests
+      #   run: |
+      #     /opt/julia/bin/julia -e 'using Pkg; pkg"test AzManagers"'
