--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -1,34 +1,34 @@
-name: UnitTests
+# name: UnitTests
 
-on:
-  push
+# on:
+#   push
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v2
-      - name: Run a one-line script
-        run: pwd
-      - name: Run a multi-line script
-        run: |
-          cd ~
-          pwd
-      - name: Install Julia System
-        run: |
-          sudo wget https://julialang-s3.julialang.org/bin/linux/x64/1.5/julia-1.5.0-linux-x86_64.tar.gz
-          sudo mkdir -p /opt/julia
-          sudo tar --strip-components=1 -xzvf julia-1.5.0-linux-x86_64.tar.gz -C /opt/julia
+#     steps:
+#       - uses: actions/checkout@v2
+#       - name: Run a one-line script
+#         run: pwd
+#       - name: Run a multi-line script
+#         run: |
+#           cd ~
+#           pwd
+#       - name: Install Julia System
+#         run: |
+#           sudo wget https://julialang-s3.julialang.org/bin/linux/x64/1.5/julia-1.5.0-linux-x86_64.tar.gz
+#           sudo mkdir -p /opt/julia
+#           sudo tar --strip-components=1 -xzvf julia-1.5.0-linux-x86_64.tar.gz -C /opt/julia
 
-          mkdir -p /home/runner/.julia/dev
-          cp -r /home/runner/work/AzManagers.jl/ /home/runner/.julia/dev/AzManagers
+#           mkdir -p /home/runner/.julia/dev
+#           cp -r /home/runner/work/AzManagers.jl/ /home/runner/.julia/dev/AzManagers
 
-          /opt/julia/bin/julia -e 'using Pkg; pkg"dev /home/runner/.julia/dev/AzManagers"'
-          /opt/julia/bin/julia -e 'using Pkg; pkg"precompile"'
-      - name: Run Julia Unit Tests
-        run: |
-          /opt/julia/bin/julia -e 'using Pkg; pkg"test AzManagers"'
+#           /opt/julia/bin/julia -e 'using Pkg; pkg"dev /home/runner/.julia/dev/AzManagers"'
+#           /opt/julia/bin/julia -e 'using Pkg; pkg"precompile"'
+#       - name: Run Julia Unit Tests
+#         run: |
+#           /opt/julia/bin/julia -e 'using Pkg; pkg"test AzManagers"'
 
 name: CI
 on:
