--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -41,8 +41,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        version: "1.5"
-        os: ubuntu-latest
+        version:
+          - '1.5'
+        os:
+          - ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: julia-actions/setup-julia@v1
