--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -45,6 +45,8 @@ jobs:
           - '1.5'
         os:
           - ubuntu-latest
+        arch:
+          - x64
     steps:
       - uses: actions/checkout@v2
       - uses: julia-actions/setup-julia@v1
