--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -46,3 +46,8 @@ jobs:
           version: ${{ matrix.julia-version }}
       - uses: julia-actions/julia-buildpkg@latest
       - uses: julia-actions/julia-runtest@latest
+        env:
+          FIRST_NAME: Mona
+          middle_name: The
+          Last_Name: Octocat
+
