--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -46,7 +46,7 @@ jobs:
           version: ${{ matrix.julia-version }}
       - uses: julia-actions/julia-buildpkg@latest
       - uses: julia-actions/julia-runtest@latest
-        env:
+        with:
           FIRST_NAME: Mona
           middle_name: The
           Last_Name: Octocat
