--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -45,9 +45,11 @@ jobs:
         with:
           version: ${{ matrix.julia-version }}
       - uses: julia-actions/julia-buildpkg@latest
+      - name: Set up env var
+        run: echo "::set-env name=FIRST_NAME::yellow"
       - uses: julia-actions/julia-runtest@latest
         with:
-          FIRST_NAME: Mona
+          FIRST_NAME: ${{ env.FIRST_NAME }}
           middle_name: The
           Last_Name: Octocat
 
