--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -14,7 +14,7 @@ jobs:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
       - name: Run Az CLI script
         run: |
-          az rg create
+          az group create -l southcentralus -n test
       - uses: julia-actions/setup-julia@latest
         with:
           version: ${{ matrix.julia-version }}
@@ -29,7 +29,7 @@ jobs:
           file: lcov.info
       - name: Run Az CLI script
         run: |
-          az rg delete
+          az group delete -n test
 # jobs:
 #   test:
 #     runs-on: ${{ matrix.os }}
