--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -29,7 +29,7 @@ jobs:
           file: lcov.info
       - name: Run Az CLI script
         run: |
-          az group delete -n test
+          az group delete -n test --yes
 # jobs:
 #   test:
 #     runs-on: ${{ matrix.os }}
