--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -8,25 +8,25 @@ jobs:
         julia-version: [1.0, 1.5]
         os: [ubuntu-latest]
     steps:
+      - env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
       - uses: actions/checkout@v1.0.0
       - uses: azure/login@v1.1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
       - name: Run Az CLI script
         run: |
-          az group create -l southcentralus -n test
+          az group create -l southcentralus -n "${{matrix.os}}-${{matrix.julia-version}}-${{github.run_id}}"
       - uses: julia-actions/setup-julia@latest
         with:
           version: ${{ matrix.julia-version }}
       - uses: julia-actions/julia-buildpkg@latest #change lastest to master
       - uses: julia-actions/julia-runtest@latest #change lastest to master
-        env:
-          GITHUB_CONTEXT: ${{ toJson(github) }}
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v1
         with:
           file: lcov.info
       - name: Run Az CLI script
         run: |
-          az group delete -n test --yes
+          az group delete -n "${{matrix.os}}-${{matrix.julia-version}}-${{github.run_id}}" --yes
         if: ${{ always() }}
