--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -20,6 +20,9 @@ jobs:
           version: ${{ matrix.julia-version }}
       - uses: julia-actions/julia-buildpkg@latest #change lastest to master
       - uses: julia-actions/julia-runtest@latest #change lastest to master
+        env:
+          AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
+          RESOURCE_GROUP: "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}"
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v1
         with:
