--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -23,6 +23,7 @@ jobs:
         env:
           AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
           RESOURCE_GROUP: "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}"
+          SS_TEMPLATE_JSON: ${{ secrets.SS_TEMPLATE_JSON }}
       - uses: julia-actions/julia-processcoverage@v1
       - uses: codecov/codecov-action@v1
         with:
