--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -22,6 +22,7 @@ jobs:
       - uses: julia-actions/julia-runtest@latest #change lastest to master
         env:
           AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
+          JULIA_VERSION: "${{ matrix.julia-version }}"
           RESOURCE_GROUP: "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}"
           SS_TEMPLATE_JSON: ${{ secrets.SS_TEMPLATE_JSON_2 }}
       - uses: julia-actions/julia-processcoverage@v1
