--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -16,11 +16,11 @@ jobs:
         run: |
           az group create -l southcentralus -n "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}"
           az sig create -g "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}" -n "dummy-sig"
-      uses: santisaez/packer-action@v1
-      with:
-        template: cofii-base.json
-      env:
-        SUBSCRIPTION_ID: ${{ secrets.SUBSCRIPTION_ID }}
+      - uses: santisaez/packer-action@v1
+        with:
+          template: cofii-base.json
+        env:
+          SUBSCRIPTION_ID: ${{ secrets.SUBSCRIPTION_ID }}
       - uses: julia-actions/setup-julia@latest
         with:
           version: ${{ matrix.julia-version }}
