--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -15,6 +15,7 @@ jobs:
       - name: Run Az CLI script
         run: |
           az group create -l southcentralus -n "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}"
+          az group wait --created --resource-group "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}"
           az sig create -g "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}" -r "sig${{ github.run_id }}"
       - uses: santisaez/packer-action@v1
         with:
