--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -19,7 +19,7 @@ jobs:
           az sig create -g "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}" -r "sig${{ github.run_id }}${{ matrix.julia-version }}"
       - uses: santisaez/packer-action@v1
         with:
-          template: cofii-base.json
+          template: cofii-base.json.j2
         env:
           SUBSCRIPTION_ID: ${{ secrets.SUBSCRIPTION_ID }}
       - uses: julia-actions/setup-julia@latest
