--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -24,7 +24,7 @@ jobs:
           ls -al ../../..
       - uses: santisaez/packer-action@v1
         with:
-          template: /home/runner/work/AzManagers.jl/cofii-base.json.j2
+          template: /home/runner/work/AzManagers.jl/AzManagers.jl/templates/cofii-base.json.j2
         env:
           SUBSCRIPTION_ID: ${{ secrets.SUBSCRIPTION_ID }}
       - uses: julia-actions/setup-julia@latest
