--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -22,11 +22,25 @@ jobs:
           ls -al ..
           ls -al ../..
           ls -al ../../..
-      - uses: santisaez/packer-action@v1
+            - name: Validate Template
+      - uses: operatehappy/packer-github-actions@master
         with:
-          template: /home/runner/work/AzManagers.jl/AzManagers.jl/templates/cofii-base.json.j2
-        env:
-          SUBSCRIPTION_ID: ${{ secrets.SUBSCRIPTION_ID }}
+          command: validate
+          target: /home/runner/work/AzManagers.jl/AzManagers.jl/templates/cofii-base.json.j2
+
+      # build artifact
+      - name: Build Artifact
+        uses: operatehappy/packer-github-actions@master
+        with:
+          command: build
+          arguments: "-color=false -force -timestamp-ui"
+          target: /home/runner/work/AzManagers.jl/AzManagers.jl/templates/cofii-base.json.j2
+
+      # - uses: santisaez/packer-action@v1
+      #   with:
+      #     template: /home/runner/work/AzManagers.jl/AzManagers.jl/templates/cofii-base.json.j2
+      #   env:
+      #     SUBSCRIPTION_ID: ${{ secrets.SUBSCRIPTION_ID }}
       - uses: julia-actions/setup-julia@latest
         with:
           version: ${{ matrix.julia-version }}
