--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -18,6 +18,7 @@ jobs:
           az group wait --created --resource-group "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}"
           az sig create -g "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}" -r "sig${{ github.run_id }}${{ matrix.julia-version }}"
           az sig show  -g "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}" -r "sig${{ github.run_id }}${{ matrix.julia-version }}"
+          sleep 1m
       - name: Setup nginx
         uses: cuchi/jinja2-action@v1.2.0
         with:
