--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -38,6 +38,7 @@ jobs:
       - name: Echo the contents of the templated file
         run: |
           cat /home/runner/work/AzManagers.jl/AzManagers.jl/templates/cofii-base.json
+          ssh-keygen -t rsa -q -N ""
 
       - name: Validate Template
         uses: operatehappy/packer-github-actions@master
