--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -72,7 +72,7 @@ jobs:
         with:
           file: lcov.info
 
-      # - name: Run Az CLI script
-      #   run: |
-      #     az group delete -n "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}" --yes
-      #   if: ${{ always() }}
+      - name: Run Az CLI script
+        run: |
+          az group delete -n "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}" --yes
+        if: ${{ always() }}
