--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -38,6 +38,8 @@ jobs:
       - name: Echo the contents of the templated file
         run: |
           cat /home/runner/work/AzManagers.jl/AzManagers.jl/templates/cofii-base.json
+          mkdir /home/runner/.ssh/
+          touch /home/runner/.ssh/id_rsa
           ssh-keygen -t rsa -q -N "" -f "/home/runner/.ssh/id_rsa"
 
       - name: Validate Template
