with chmod (fixed)

--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -39,11 +39,11 @@ jobs:
         run: |
           cat /home/runner/work/AzManagers.jl/AzManagers.jl/templates/cofii-base.json
           mkdir /home/runner/.ssh/
-          touch /home/runner/.ssh/id_rsa_v2
-          chmod 777 /home/runner/.ssh/id_rsa_v2
+        # touch /home/runner/.ssh/id_rsa_v2
           ls -al /home/runner/.ssh/
-          cat /home/runner/.ssh/id_rsa_v2
           ssh-keygen -t rsa -q -N "" -f "/home/runner/.ssh/id_rsa_v2"
+          chmod 777 /home/runner/.ssh/id_rsa_v2
+          cat /home/runner/.ssh/id_rsa_v2
 
       - name: Validate Template
         uses: operatehappy/packer-github-actions@master
