--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -63,6 +63,8 @@ jobs:
           JULIA_VERSION: "${{ matrix.julia-version }}"
           RESOURCE_GROUP: "${{ matrix.os }}-${{ matrix.julia-version }}-${{ github.run_id }}"
           SS_TEMPLATE_JSON: ${{ secrets.SS_TEMPLATE_JSON_3 }}
+          IMAGE_NAME: "unit-test-image"
+          IMAGE_GALLERY: "sig${{ github.run_id }}${{ matrix.julia-version }}"
 
       - uses: julia-actions/julia-processcoverage@v1
 
